test/should-fail/vsgc1776tooMany.f3
/**
 * Should-fail test VSGC-1776 : Check for malformed 'run()' function parameters
 *
 * @test/compile-error
 */

function run(args : String[], oops : Integer) {
}
